# rust_project

./: README.md
api/: Cargo.toml
api/src/: error.rs  main.rs  model.rs
api/src/web/: mod.rs  routes_workers.rs
