[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
